--- a/apphookupdate.json
+++ b/apphookupdate.json
@@ -1,8 +1,5 @@
 {
     "versionCode" : 191,
-    "message" : 
-    "
-    修复一些bug
-        ",
-    "url" : "https://xpc.lanzout.com/iahnn0syz86h"
+    "message" : "AppHook1.9.1:修复一些bug，蓝奏云密码：5e9l",
+    "url" : "https://wwjo.lanzouy.com/b0eyyadsj"
 }
